CHANGES.txt - 05/23/2001
------------------------

CHANGES IN HTMLDOC v1.8.13

    NEW FEATURES

	- Added support for Acrobat 5.0 (PDF 1.4).
	- Added support for transparency in PostScript and
	  PDF 1.1 and 1.2 output.

    CHANGES

	- External file references to non-PDF files now use the
	  "Launch" action so they can be opened/executed/saved
	  as allowed by the OS and PDF viewer.
	- Changed the indexed/JPEG'd transition point to 256
	  colors when using Flate compression.  This makes PDF
	  files much smaller in general.
	- Changed the in-line image size limit to 64k.
	- Now allow "<" followed by whitespace, "=", or "<". 
	  This violates the HTML specification, but we're sick
	  of people complaining about it.
	- Preferences are now stored in a user-specific file
	  under Windows, just like UNIX.  This provides
	  user-specific preferences and allows preferences to
	  be kept when upgrading to new versions of HTMLDOC.
	- The book loading code now allows for blank lines, even
	  though these are not a part of the format. (added to
	  support some scripted apps that include extra
	  newlines...)

    BUG FIXES

	- The table formatting code adding the border width to
	  the cell width, while Netscape and MSIE don't.  This
	  caused some interesting formatting glitches...
	- The table formatting code didn't account for the
	  preferred width of colspan'd cells.
	- The table formatting code tried to enforce the
	  minimum cell width when squeezing a table to fit on
	  the page; this caused the table to still exceed the
	  width of the page.
	- The PDF catalog object could contain a reference to
	  a /Names object of "0 0 R", which is invalid.  This
	  would happen when the "--no-links" option was used.
	- Several HTML elements were incorrectly written with
	  closing tags.
	- When piping PDF output, the temporary file that is
	  created needed to be open for reading and writing,
	  but HTMLDOC only opened the file for writing.
	- Image links did not work.